# crates-ssr

./: .gitignore  Cargo.toml  Dioxus.toml
public/: style.css
src/: api.rs  layout.rs  main.rs  route.rs  search.rs
